# pathway

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  gitleaks.toml  package.json  pnpm-lock.yaml  pyproject.toml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: README.md  package.json  playwright.config.ts  vite.config.ts
docs/: ARCHITECTURE.md  CODEX_START_HERE.md  CODEX_TASKS_PHASED.md  DESIGN_RESEARCH_PLAYBOOK.md  DYNAMIC_GRAPH_SPEC.md  IMPLEMENTATION_PLAN.md  PATHWAY_REFRAME.md  PLANS.md  RAG_AND_CRAWLING_SPEC.md  RESOURCE_MAP.md  SECURITY_CHECKLIST.md  STYLE_GUIDE.md  TAURI_PACKAGING_NOTE.md
docs/adr/: 0001-stack-selection.md
docs/phases/: phase-00-repo-bootstrap.md  phase-01-backend-domain-persistence.md  phase-02-static-life-map-ui.md  phase-03-dynamic-graph-schema-validation.md  phase-04-llm-generation-no-rag.md  phase-05-source-library-rag.md  phase-06-rag-grounded-generation.md  phase-07-checkins-revisions.md  phase-08-quality-export-packaging.md
docs/state/: CURRENT_STATE.md  EXECPLAN_AGENT_LED_PATHWAY_RESEARCH_LOOP.md  EXECPLAN_CODEX_LOGIN_AND_EMPTY_STATE.md  EXECPLAN_COLLECTOR_DOCTOR_RUNTIME_FIX.md  EXECPLAN_COLLECTOR_FETCH_BRIDGE.md  EXECPLAN_COLLECTOR_HEALTH_COMMANDS.md  EXECPLAN_COLLECTOR_STATUS_LIVE_WIRING.md  EXECPLAN_CURRICULUM_GROUNDING_TRACE.md  EXECPLAN_DEEP_RESEARCH_AND_COLLECTOR_AUDIT.md  EXECPLAN_DESKTOP_DEV_HOST_FIX.md  EXECPLAN_DESKTOP_DEV_SERVICE_STABILITY.md  EXECPLAN_DESKTOP_TAURI_REFOCUS.md  EXECPLAN_DYNAMIC_STUB_GRAPH_VARIATION.md  EXECPLAN_ENGLISH_RAG_VALIDATION.md  EXECPLAN_FIRST_TAB_AND_GRAPH_ALIGNMENT.md  EXECPLAN_FIRST_TAB_PREVIEW_REFINEMENT.md  EXECPLAN_FONT_SWAP_HOMEVIDEO_GALMURI.md  EXECPLAN_GENERATION_RECOVERY_AND_GRAPH_LAYOUT.md  EXECPLAN_GOAL_INPUT_RELOCATION.md  EXECPLAN_GOAL_RADIAL_GRAPH_AND_ACTION_PANEL.md  EXECPLAN_GRAPH_VIEWPORT_READABILITY.md  EXECPLAN_JAPANESE_CONVERSATION_PATHWAY_RUN.md  EXECPLAN_MODERN_NODE_DESKTOP_DEV.md  EXECPLAN_PATHWAY_DESKTOP_REFACTOR.md  EXECPLAN_PATHWAY_DEV_API_BOOT.md  EXECPLAN_PATHWAY_EDGE_NATURALIZATION.md  EXECPLAN_PATHWAY_GOAL_EDGE_ROUTING_REPAIR.md  EXECPLAN_PATHWAY_GRAPH_BALANCE_PASS.md  EXECPLAN_PATHWAY_INTAKE_CONVERSATION.md  (+36 more)
scripts/: dev-reset.mjs  install-intel-mac.sh  run-installed-intel-mac.sh  with-modern-node.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: pathway.icns
src-tauri/src/: main.rs
templates/: example_graph_bundle.json
(+613 files in other folders)
