[project]
name = "life-map-api"
version = "0.1.0"
description = "Local-first FastAPI backend for the Life Map application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "sqlmodel>=0.0.27,<0.0.28",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<0.29",
  "pre-commit>=4.3,<5.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.9,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"apps/api/lifemap_api/api/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
