[package]
name = "pathway"
version = "0.1.0"
description = "Tauri desktop shell for PATHWAY"
authors = ["Henry"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }

[features]
default = []
